--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -2,11 +2,21 @@ server:
   port: 1227
 
 spring:
+  data:
+    redis:
+      port: 6378
+      host: 101.42.242.33
+      password: 123456  # 如果 Redis 有密码就取消注释
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://101.42.242.33:3306/cloud_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: tancong
     password: tancong
+
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
 
   # 文件上传配置
   servlet:
@@ -14,15 +24,17 @@ spring:
       enabled: true
       max-file-size: 100MB        # 单个文件最大大小
       max-request-size: 100MB      # 整个请求最大大小
+  application:
+    name: cloud
 
 # 腾讯云COS配置（生产环境应从环境变量读取）
 tencent:
   cos:
-    secret-id: ${COS_SECRET_ID:your-secret-id}
-    secret-key: ${COS_SECRET_KEY:your-secret-key}
-    region: ${COS_REGION:ap-guangzhou}
-    bucket-name: ${COS_BUCKET_NAME:cloud-storage-1234567890}
-    custom-domain: ${COS_CUSTOM_DOMAIN:}
+    secret-id: ${COS_SECRET_ID}
+    secret-key: ${COS_SECRET_KEY}
+    region: ${COS_REGION:ap-beijing}
+    bucket-name: ${COS_BUCKET_NAME:cloud-bucket-1384517550}
+    custom-domain: ${COS_CUSTOM_DOMAIN:""}
     url-expiration-seconds: 3600  # URL有效期1小时
 
 # 文件上传配置
@@ -57,3 +69,18 @@ file:
       - txt
       - zip
       - mp4
+
+mybatis-plus:
+  # 1. XML 映射文件位置配置 (非常重要)
+  # 告诉 MyBatis-Plus 去哪里找您自定义的 XML 文件 (如 FileMapper.xml)
+  mapper-locations: classpath:mapper/*.xml
+
+  # 2. 实体类别名扫描 (可选, 但推荐)
+  # 告诉 MyBatis-Plus 哪里是您的实体类 (如 com.xxx.File)，这样在 XML 中可以直接使用类名而不是全限定名
+  type-aliases-package: com.tancong.**.entity
+  # 3. 增强功能配置 (如分页插件)
+  configuration:
+    # 开启驼峰命名规则 (再次确认，防止被覆盖)
+    map-underscore-to-camel-case: true # 推荐设置为 true
+    # 开启懒加载 (如果使用关联查询)
+    lazy-loading-enabled: true
