添加分享功能模块

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <modules>
         <module>common</module>
         <module>core</module>
-        <module>secruity</module>
+        <module>security</module>
     </modules>
     <scm>
         <connection/>
