--- a/core/pom.xml
+++ b/core/pom.xml
@@ -50,7 +50,7 @@
 
         <dependency>
             <groupId>com.tancong</groupId>
-            <artifactId>secruity</artifactId>
+            <artifactId>security</artifactId>
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
